--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NHibernate" Version="5.3.2" />
+  </ItemGroup>
 </Project>
