--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -6,5 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NHibernate" Version="5.3.2" />
+    <PackageReference Include="Npgsql" Version="4.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
   </ItemGroup>
 </Project>
