--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Npgsql" Version="4.1.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
 </Project>
