changed UserModel to User.

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,6 +9,12 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
     <PackageReference Include="NHibernate" Version="5.3.3" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="User.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="User.hbm.xml" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
