--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -11,6 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
-    <Folder Include="services\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
