--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
     <PackageReference Include="NHibernate" Version="5.3.3" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
