--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -8,6 +8,11 @@
     <PackageReference Include="NHibernate" Version="5.3.2" />
     <PackageReference Include="Npgsql" Version="4.1.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.11.7" />
+    <PackageReference Include="RestSharp.Newtonsoft.Json" Version="1.5.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Json.Net" Version="1.0.23" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
