--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="NHibernate" Version="5.3.3" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
