--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/images
+/API/client/src/images
+/API/obj
+/CORE/obj
 
 npm-debug.log*
 yarn-debug.log*
