--- a/API/client/.gitignore
+++ b/API/client/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -17,9 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/images
-./CORE/obj
-./API/obj
+images
+obj
+
 
 npm-debug.log*
 yarn-debug.log*
