added methods to BuyStockServices.

--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -23,10 +23,12 @@
     <None Remove="Models\User.hbm.xml" />
     <None Remove="Models\session.hbm.xml" />
     <None Remove="Mapping\Wallet.xml" />
+    <None Remove="Mapping\Transaction.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mapping\User.hbm.xml" />
     <EmbeddedResource Include="Mapping\Session.hbm.xml" />
     <EmbeddedResource Include="Mapping\Wallet.hbm.xml" />
+    <EmbeddedResource Include="Mapping\Transaction.hbm.xml" />
   </ItemGroup>
 </Project>
