--- a/API/client/package.json
+++ b/API/client/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
@@ -14,7 +18,8 @@
     "react-feather": "^2.0.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-spinners": "^0.9.0"
+    "react-spinners": "^0.9.0",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
