--- a/API/client/package.json
+++ b/API/client/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
