--- a/API/client/package.json
+++ b/API/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.4",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
